# mobile-check

./: .gitignore  BUILD.md  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: release-windows.yml
engine/: __init__.py  adb.py  core.py  device_detect.py  i18n.py  ios_backup.py  ios_toolchain.py  mobilecheck.py  progress.py  report_pdf.py
engine/checks_android/: cat01_integrity.py  cat02_stalkerware.py  cat03_surveillance.py  cat04_network.py
engine/checks_ios/: cat01_lockdown.py  cat02_backup.py  cat03_live.py
engine/data/: ios-requirements.in  python-runtime.json  stalkerware_packages.json
engine/reporters/: __init__.py  html.py  json_out.py  pdf.py
frontend/: app.js  icons.js  index.html  node.js  styles.css
landing/: README.md  _headers  index.html  node.css  site.js  styles.css
scripts/: build-engine.ps1  build-engine.sh  engine.entitlements  engine_entry.py  fetch-platform-tools.sh  fetch-python-runtime.sh  make-icon.py  platform-tools.sha256  python-runtime.sha256  release-macos.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
