[package]
name = "app"
version = "0.1.0"
description = "MobileCheck — read-only self-assessment for your own phone, over USB"
authors = ["Luis Assardo"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
age = "0.10"
secrecy = "0.8"
hmac = "0.12"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
